se agregaron nuevos cambios al archivo de estilos.css y un nuevo h1 al index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>el post</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
@@ -12,8 +13,8 @@
             cabecera
         </div>
         <div id="post">
-            <h1>Este es el titulo atractivo e interesante del post</h1>
-            <p>y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <h1><span>Mi Post   </span>. . .     Compartiendo con los demas</h1>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
         </div>
     </div>
 </body>
